@@ -1,3 +1,8 @@
+(24/06/14)
+==========
+
+· Updated check_lastmod_img
+
 (18/06/14)
 ==========
 
